--- a/neightborhood-map-project/css/style.css
+++ b/neightborhood-map-project/css/style.css
@@ -7,7 +7,10 @@ html {
 }
 
 /* common elements */
-html, body, section, .container {
+html, 
+body, 
+section, 
+.container {
   height: 100vh;
   margin: 0;
   width: 100%;
