--- a/Cow Counter/css/style.css
+++ b/Cow Counter/css/style.css
@@ -1,3 +1,9 @@
+img.cow {
+    display: block;
+    margin-left: auto;
+    margin-right: auto }
+
+
 body {
     font-family: helvetica, arial, verdana, sans-serif;
 }
