--- a/anna-dowlin-mock-site/css/stylesheet.css
+++ b/anna-dowlin-mock-site/css/stylesheet.css
@@ -2,6 +2,19 @@ body {
 	text-align: center;
 	background: url("http://dash.ga.co/assets/anna-bg.png");
 	background-size: cover;
+	background-position: center;
 	color:white;
 	font-family: helvetica;
+}
+p{
+	font-size: 22px;
+}
+input{
+	border: 0px;
+	padding: 10px;
+	font-size: 18px;
+}
+input[type="submit"]{
+	background: red;
+	color: white;
 }
