--- a/jeff-mock-blog/css/stylesheet.css
+++ b/jeff-mock-blog/css/stylesheet.css
@@ -1,7 +1,26 @@
 header{
 	text-align: center;
+	background: url("http://dash.ga.co/assets/jeff-bg.png");
+	background-size: cover;
+	color: white;
+}
+
+a {
+	color:white;
+}
+
+h1{
+	font-size: 70px;
+}
+
+img{
+	margin: 40px 0px 0px 0px;
 }
 
 ul{
 	padding: 10px;
+}
+li{
+	display: inline;
+	padding: 0px 10px 0px 10px;
 }
