--- a/jeff-mock-blog/css/stylesheet.css
+++ b/jeff-mock-blog/css/stylesheet.css
@@ -15,10 +15,13 @@ h1{
 
 img{
 	margin: 40px 0px 0px 0px;
+	border: 7px solid white;
+	border-radius: 20px;
 }
 
 ul{
 	padding: 10px;
+	background: black;
 }
 li{
 	display: inline;
