--- a/jeff-mock-blog/css/stylesheet.css
+++ b/jeff-mock-blog/css/stylesheet.css
@@ -21,7 +21,7 @@ img{
 
 ul{
 	padding: 10px;
-	background: black;
+	background: rgba(0,0,0,0.5);
 }
 li{
 	display: inline;
@@ -29,7 +29,16 @@ li{
 }
 
 article {
-	width: 500px;
+	max-width: 500px;
 	padding: 20px;
 	margin: 0 auto;
 }
+@media (max-width: 500px) {
+        h1 {
+          font-size:36px;
+        }
+        li {
+          display: block;
+          padding: 5px;
+        }  
+    }
