centered images and added 0 auto margin

--- a/eshas-resturant/css/style.css
+++ b/eshas-resturant/css/style.css
@@ -3,4 +3,9 @@ body {
 }
 div {
 	height: 200px;
+	background: url("http://dash.ga.co/assets/firstcourse.jpg");
+	background-size: cover;
+	background-size: cover;
+    margin: 0 auto;
+    max-width: 600px;
 }
