--- a/eshas-resturant/css/style.css
+++ b/eshas-resturant/css/style.css
@@ -1,3 +1,8 @@
+h1{
+  font-family: 'Londrina Shadow', cursive;
+  font-size: 75px;
+  text-align: center;
+}
 body {
   font-family: helvetica, sans-serif;
   margin: 0 auto;
@@ -16,7 +21,8 @@ p {
   line-height: 28px;
   color: #ffffff;
   text-align: justify;
-  background: #000000;
+  background: black;
+  background: -webkit-linear-gradient(bottom, rgba(0,0,0,0), rgba(0,0,0,.4));
   position: absolute;
   bottom: 0;
   margin: 0;
