--- a/eshas-resturant/css/style.css
+++ b/eshas-resturant/css/style.css
@@ -2,13 +2,24 @@ h1{
   font-family: 'Londrina Shadow', cursive;
   font-size: 75px;
   text-align: center;
+  margin: 60px 0px 0px 0px;
+  background-color: #aaaaaa;
+}
+
+h2{
+  text-align: center;
+  margin: 0px 0px 70px 0px;
+  background-color: #bbbbbb;
+
 }
 
 body {
   font-family: helvetica, sans-serif;
   margin: 0 auto;
   max-width: 600px;
+  background-color: #232323;
 }
+
 div {
 	height: 200px;
 	background-size: cover;
