--- a/eshas-resturant/css/style.css
+++ b/eshas-resturant/css/style.css
@@ -58,3 +58,10 @@ p {
 .price{
   float: right;
 }
+@media (max-width: 500px) {
+  h1{
+  font-size: 50px;
+  margin-top: 20px;
+  line-height: 40px;
+  }
+}
