--- a/eshas-resturant/css/style.css
+++ b/eshas-resturant/css/style.css
@@ -8,7 +8,7 @@ h1{
 
 h2{
   text-align: center;
-  margin: 0px 0px 70px 0px;
+  margin: 20px 0px 30px 0px;
   background-color: #bbbbbb;
 
 }
@@ -64,5 +64,10 @@ p {
   font-size: 50px;
   margin-top: 20px;
   line-height: 40px;
+  }
+  h2{ 
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom:30px;
   }
 }
