--- a/far-out-delivery/css/business-casual.css
+++ b/far-out-delivery/css/business-casual.css
@@ -34,11 +34,23 @@ p {
 hr {
     max-width: 400px;
     border-color: #999999;
+    margin: 0px 0px 50px 0px;
+}
+
+.hours{
+
+    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 700;
+    text-align: center;
+    color: #ffffff;
 }
 
 .brand,
-.address-bar {
+.address-bar, {
     display: none;
+    text-align: center;
 }
 
 .navbar-brand {
