--- a/far-out-delivery/css/business-casual.css
+++ b/far-out-delivery/css/business-casual.css
@@ -51,18 +51,25 @@ hr {
 .address-bar, {
     display: none;
     text-align: center;
+
 }
 
 .navbar-brand {
     text-transform: uppercase;
     font-weight: 900;
     letter-spacing: 2px;
+   
 }
 
 .navbar-nav {
     text-transform: uppercase;
     font-weight: 400;
     letter-spacing: 3px;
+
+}
+
+.navbar-header{
+    margin-top: 10px;
 }
 
 .img-full {
